Blender crashes opening a .blend file with double click or dragging and dropping it on to the executable #44217

Closed
opened 2015-04-01 14:45:34 +02:00 by Riccardo Giovanetti · 16 comments

System Information
Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM

Blender Version
Broken: Blender 2.74 64bit (Hash: 000dfc0), (blender-2.74-windows64.zip);
Worked: (optional)

Short description of error
If the option User Preferences | File | Load UI is unchecked, double clicking or dragging and dropping a .blend file over the executable blender.exe causes Blender to start up and close immediately.

Exact steps for others to reproduce the error
What happens is that with the current version 2.74's blender.exe set as the default application to open .blend files when you double click on a .blend file or even dragging and dropping it over the blender.exe program, Blender starts up but then closes immediately generating the following blender.crash.txt log file:

backtrace

18: PyInit_mathutils_noise_types - 0x3FE89230
17: fftw_plan_many_dft - 0x3F2147B0
16: fftw_plan_many_dft - 0x3F2147B0
15: fftw_plan_many_dft - 0x3F2147B0
14: UnhandledExceptionFilter - 0x76F2B7E0
13: MD5Final - 0x770415B0
12: _C_specific_handler - 0x76FC852C
11: RtlDecodePointer - 0x76FD9C80
10: RtlUnwindEx - 0x76FC8610
9: KiUserExceptionDispatcher - 0x7700121A
8: fftw_plan_many_dft - 0x3F2147B0
7: fftw_plan_many_dft - 0x3F2147B0
6: fftw_plan_many_dft - 0x3F2147B0
5: fftw_plan_many_dft - 0x3F2147B0
4: PyInit_mathutils_noise_types - 0x3FE89230
3: fftw_plan_many_dft - 0x3F2147B0
2: osl_trunc_vv - 0x416A3110
1: BaseThreadInitThunk - 0x76EA59E0
0: RtlUserThreadStart - 0x76FDC520

So I restored all the default settings and checking all my changes to the preferences one by one I found that what apparently seems to cause this behaviour is the "Load UI" option if unchecked. If you reinstate it (checked) opening automatically the file .blend as well as dragging and dropping the .blend file over the executable (blender.exe) works fine. I cannot be sure anyway that other setting might produce the same problem, at least this is what I found out.

**System Information** Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM **Blender Version** Broken: Blender 2.74 64bit (Hash: 000dfc0), (blender-2.74-windows64.zip); Worked: (optional) **Short description of error** If the option User Preferences | File | Load UI is unchecked, double clicking or dragging and dropping a .blend file over the executable blender.exe causes Blender to start up and close immediately. **Exact steps for others to reproduce the error** What happens is that with the current version 2.74's blender.exe set as the default application to open .blend files when you double click on a .blend file or even dragging and dropping it over the blender.exe program, Blender starts up but then closes immediately generating the following blender.crash.txt log file: # backtrace 18: PyInit_mathutils_noise_types - 0x3FE89230 17: fftw_plan_many_dft - 0x3F2147B0 16: fftw_plan_many_dft - 0x3F2147B0 15: fftw_plan_many_dft - 0x3F2147B0 14: UnhandledExceptionFilter - 0x76F2B7E0 13: MD5Final - 0x770415B0 12: _C_specific_handler - 0x76FC852C 11: RtlDecodePointer - 0x76FD9C80 10: RtlUnwindEx - 0x76FC8610 9: KiUserExceptionDispatcher - 0x7700121A 8: fftw_plan_many_dft - 0x3F2147B0 7: fftw_plan_many_dft - 0x3F2147B0 6: fftw_plan_many_dft - 0x3F2147B0 5: fftw_plan_many_dft - 0x3F2147B0 4: PyInit_mathutils_noise_types - 0x3FE89230 3: fftw_plan_many_dft - 0x3F2147B0 2: osl_trunc_vv - 0x416A3110 1: BaseThreadInitThunk - 0x76EA59E0 0: RtlUserThreadStart - 0x76FDC520 So I restored all the default settings and checking all my changes to the preferences one by one I found that what apparently seems to cause this behaviour is the "Load UI" option if unchecked. If you reinstate it (checked) opening automatically the file .blend as well as dragging and dropping the .blend file over the executable (blender.exe) works fine. I cannot be sure anyway that other setting might produce the same problem, at least this is what I found out.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Harvester

Added subscriber: @Harvester

#44063 was marked as duplicate of this issue

#44063 was marked as duplicate of this issue
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

null de-ref here

https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/blenkernel/intern/blender.c#l286

	if (curscreen)
		curscene = curscreen->scene;

seems to fix it.

null de-ref here https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/blenkernel/intern/blender.c#l286 if (curscreen) curscene = curscreen->scene; seems to fix it.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, this is a bit serious, setting to high priority

Confirmed, this is a bit serious, setting to high priority

Added subscribers: @sicutunum, @mont29

Added subscribers: @sicutunum, @mont29

This comment was removed by @sicutunum

*This comment was removed by @sicutunum*
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

hey hey the bug is still going to be resolved no matter who posted it

hey hey the bug is still going to be resolved no matter who posted it

Yes I know. It's awesome when no one respects your voice enough to test a bug that will disable thousands of users upon release:

https://developer.blender.org/T44063

Yes I know. It's awesome when no one respects your voice enough to test a bug that will disable thousands of users upon release: https://developer.blender.org/T44063

Sorry to come off as such a whiner. This place is about getting things done not drama. Nobody sucks. I'm sorry. I need to check my blood sugar.

Sorry to come off as such a whiner. This place is about getting things done not drama. Nobody sucks. I'm sorry. I need to check my blood sugar.

This issue was referenced by 4b847595ee

This issue was referenced by 4b847595eebc42828ecb87d198bf7c2c7bce7372
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 4b847595ee.

Closed by commit 4b847595ee.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44217
No description provided.