Fix T44217: Crash when starting .blend without "Load UI" enabled

Caused by changes in 31e26bb83b. This makes it fall back to the old
method if we can't find a screen.

Patch is actually by @LazyDodo with minor edits by me.